SERVER-41073 Remove infoObj from being generated for WT's app_metadata